# atomicsettle

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
docs/architecture/: overview.md
docs/getting-started/: concepts.md  quickstart.md
docs/integration-guide/: bank-integration.md
reference/: Cargo.toml
reference/common/: Cargo.toml
reference/common/src/: error.rs  identifiers.rs  lib.rs  monetary.rs  settlement.rs  time.rs
reference/coordinator/: Cargo.toml
reference/coordinator/src/: config.rs  coordinator.rs  lib.rs  lock_manager.rs  main.rs  metrics.rs  participant_manager.rs  settlement_processor.rs  state.rs
reference/crypto/: Cargo.toml
reference/crypto/src/: encryption.rs  hash.rs  lib.rs  signing.rs
reference/fx/: Cargo.toml
reference/fx/src/: cache.rs  conversion.rs  engine.rs  error.rs  lib.rs  provider.rs  rate_lock.rs
reference/ledger/: Cargo.toml
reference/ledger/src/: account.rs  balance.rs  engine.rs  journal.rs  lib.rs
reference/participant/: Cargo.toml
reference/participant/src/: client.rs  config.rs  connection.rs  handler.rs  lib.rs
reference/protocol/: Cargo.toml
reference/protocol/src/: lib.rs  messages.rs
sdk/python/: pyproject.toml
sdk/python/src/atomicsettle/: __init__.py  client.py  exceptions.py  types.py
simulator/: Cargo.toml  README.md
simulator/src/: bank.rs  controller.rs  main.rs  metrics.rs  scenario.rs
spec/: COMPLIANCE.md  MESSAGES.md  PROTOCOL.md  SECURITY.md  SETTLEMENT.md
