[workspace]
resolver = "2"
members = [
    "coordinator",
    "participant",
    "ledger",
    "fx",
    "crypto",
    "protocol",
    "common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AtomicSettle Contributors"]
license = "Apache-2.0"
repository = "https://github.com/atomicsettle/atomicsettle"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
prost-types = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = "2.0"
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.8"

# Networking
tonic = "0.11"
tonic-build = "0.11"
prost-build = "0.12"
tower = "0.4"
hyper = "1.1"

# Utilities
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dashmap = "5.5"
parking_lot = "0.12"

# Testing
tokio-test = "0.4"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
