[package]
name = "atomicsettle-simulator"
version = "0.1.0"
edition = "2021"
authors = ["AtomicSettle Contributors"]
license = "Apache-2.0"
description = "AtomicSettle test and simulation environment"

[[bin]]
name = "simulator"
path = "src/main.rs"

[dependencies]
atomicsettle-common = { path = "../reference/common" }
atomicsettle-coordinator = { path = "../reference/coordinator" }
atomicsettle-participant = { path = "../reference/participant" }

tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
