[package]
name = "atomicsettle-ledger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AtomicSettle double-entry ledger engine"

[dependencies]
atomicsettle-common = { path = "../common" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
